--- a/themes/hugo-theme-cactus-plus/layouts/partials/footer.html
+++ b/themes/hugo-theme-cactus-plus/layouts/partials/footer.html
@@ -6,7 +6,7 @@
     {{ with .Site.Params.copyright }}
         {{ . | markdownify }}
     {{ else }}
-       © Copyright {{ now.Format "2006"}} <i class="fa fa-heart" aria-hidden="true"></i> {{ .Site.Params.Author }}
+       &copy; Copyright {{ now.Format "2006"}} <i class="fa fa-heart" aria-hidden="true"></i> {{ .Site.Params.Author }}
     {{ end }}
     </p>
     <p class="small">
